Mark Canvas::tileSize and Canvas::canvasWindow as obsolete.

The feature has never worked properly and the documentation is misleading.

Task-number: QTBUG-33129
Change-Id: I75c5073ebf4ca10f45d42aca76444ab3d7fb3820
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>
Reviewed-by: Robin Burchell <robin.burchell@viroteck.net>