src/quick/items/context2d/qquickcanvasitem.cpp
@@ -256,19 +256,6 @@ QQuickCanvasItemPrivate::~QQuickCanvasItemPrivate()
     The default render target is Canvas.Image and the default renderStrategy is
     Canvas.Immediate.
 
-    \section1 Tiled Canvas
-    The Canvas item supports tiled rendering by setting \l canvasSize, \l tileSize
-    and \l canvasWindow properties.
-
-    Tiling allows efficient display of a very large virtual canvas via a smaller
-    canvas window. The actual memory consumption is in relation to the canvas
-    window size.  The painting code can draw within the virtual canvas without
-    handling coordinate system transformations.
-
-    The tiles overlapping with the canvas window may be cached eliminating the
-    need to redraw, which can lead to significantly improved performance in
-    some situations.
-
     \section1 Pixel Operations
     All HTML5 2D context pixel operations are supported. In order to ensure
     improved pixel reading/writing performance the \a Canvas.Image render
@@ -431,6 +418,8 @@ void QQuickCanvasItem::setCanvasSize(const QSizeF & size)
 
     By default the tileSize is the same as the canvasSize.
 
+    \obsolete This feature is incomplete. For details, see QTBUG-33129.
+
     \sa canvasSize, canvasWindow
 */
 QSize QQuickCanvasItem::tileSize() const
@@ -463,6 +452,8 @@ void QQuickCanvasItem::setTileSize(const QSize & size)
      If the canvasSize is different to the Canvas item size, the Canvas item
      can display different visible areas by changing the canvas windowSize
      and/or position.
+
+    \obsolete This feature is incomplete. For details, see QTBUG-33129
 
     \sa canvasSize, tileSize
 */
